fixed some mobile alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,7 @@
 @import 'bourbon/bourbon';
 /* $visual-grid: true; */
 @import 'grid-settings';
-@import "base/base";
+@import 'base/base';
 @import 'neat/neat';
 $tablet: new-breakpoint(max-width 840px 8);
 $mobile: new-breakpoint(max-width 500px 4);
@@ -47,6 +47,7 @@ body {
   @include media($mobile) {
     background-color: #293f69;
     background-image: none;
+    width: 100%;
     height: 700px;
   }
 
@@ -66,9 +67,9 @@ body {
   @include shift(.1);
 
   @include media($mobile) {
-    @include shift(1.5);
+    @include shift(1.1);
     font-size: 70px;
-
+    text-align: left;
  }
 
 }
@@ -81,10 +82,11 @@ body {
   @include shift(.1);
 
   @include media($mobile) {
-    font-size: 40px;
     @include span-columns(4);
-/*     @include shift(2);
- */
+
+    text-align: center;
+    font-size: 35px;
+
  }
 }
 
@@ -111,8 +113,8 @@ body {
 
   font-family: 'Lato', sans-serif;
   border: solid white 2px;
-  display: inline;
-  font-size: 30px;
+/*   display: inline;
+ */  font-size: 30px;
   color: white;
   display: inline-block;
   height: 50px;
